# bozEvent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tools.cmake
ext_build/: boz-build.cmake  boz-vars.cmake  checkLicense.sh  generate_apps.cmake  generate_libs.cmake  generate_tests.cmake
include/: CMakeLists.txt  bevt_client.h
package/: package.cmake
src/: CMakeLists.txt
src/central/: CMakeLists.txt  bevt_central_main_socket.c  bevt_central_p.h  bevt_central_parse_prot_cmd.c  bevt_centrald.c
src/client/: CMakeLists.txt  bevt_client_finalise.c  bevt_client_init.c  bevt_client_notify.c  bevt_client_p.c  bevt_client_p.h  bevt_client_parse_prot_cmd.c  bevt_client_parse_prot_event.c  bevt_client_process.c  bevt_client_register.c  bevt_client_register_update.c  bevt_client_subscribe.c  bevt_client_subscribe_update.c  bevt_client_unregister.c  bevt_client_unsubscribe.c
src/debug/: CMakeLists.txt  bevt_debug_p.c  bevt_debug_p.h
src/relay/: CMakeLists.txt  bevt_relay_db_check_reg.c  bevt_relay_db_check_sub.c  bevt_relay_db_close.c  bevt_relay_db_get_elem.c  bevt_relay_db_init.c  bevt_relay_db_set_elem.c  bevt_relay_main_socket.c  bevt_relay_p.c  bevt_relay_p.h  bevt_relay_parse_prot_cmd.c  bevt_relay_parse_prot_event.c  bevt_relayd.c  bevt_relayd_dbcreate.sql
test/: CMakeLists.txt
test/client/: CMakeLists.txt  init_fini.c  init_fini.cmake  util.c  util.cmake
test/relay/: CMakeLists.txt  db.c  db.cmake
